# rfnoc-spectrum_sensor

./: CMakeLists.txt  MANIFEST.md  README.md  anAppz4A.vivado_simgen.tcl
cmake/: setupenv.sh
cmake/Modules/: spectrum_sensorConfig.cmake
docs/: README.spectrum_sensor
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: spectrum_sensor_binAggr.xml
include/spectrum_sensor/: CMakeLists.txt  api.h  binAggr.h  binAggr_block_ctrl.hpp
lib/: CMakeLists.txt  binAggr_block_ctrl_impl.cpp  binAggr_impl.cc  binAggr_impl.h  qa_binAggr.cc  qa_binAggr.h  qa_spectrum_sensor.cc  qa_spectrum_sensor.h  test_spectrum_sensor.cc
python/: CMakeLists.txt  __init__.py
rfnoc/blocks/: binAggr.xml
rfnoc/fpga-src/: Makefile.srcs  binAggr.v  noc_block_binAggr.v
rfnoc/testbenches/: CMakeLists.txt
rfnoc/testbenches/noc_block_binAggr_tb/: Makefile  noc_block_binAggr_tb.sv
swig/: CMakeLists.txt  spectrum_sensor_swig.i
